assets/css/style.css
/* ... */
.gutter {
  position: absolute;
  width: 1.618em;
  height: 0; }

.missing-text,
.too-much-text,
.missing-image {
  position: relative; }
  .missing-text::after,
  .too-much-text::after,
  .missing-image::after {
    content: "Too much text";
    font-family: "Merriweather Sans", sans-serif;
    text-transform: uppercase;
    font-weight: bold;
    background: red;
    color: white;
    opacity: 0.75;
    position: absolute;
    left: 50%;
    top: 50%;
    margin: -0.75em -5em;
    width: 10em;
    text-align: center;
    line-height: 1.5em;
    height: 1.5em;
    font-size: 200%;
    -webkit-transform: rotate(-30deg);
    -moz-transform: rotate(-30deg);
    -ms-transform: rotate(-30deg);
    -o-transform: rotate(-30deg);
    transform: rotate(-30deg);
    pointer-events: none; }

.missing-image::after {
  content: "Missing image"; }

.missing-text::after {
  content: "Missing text"; }

.about-jesters {
  background: #5f0039; }
  .about-jesters .container {
    padding-bottom: 1em; }
  .about-jesters article {
    background: white;
    border-radius: 0.1875em;
    padding: 0.809em;
    text-align: center;
    margin-bottom: 1em; }
    .about-jesters article[data-title] {
      background: #e4b133; }
    .about-jesters article[data-title="Musician"] {
      background: #dddddd; }
    .about-jesters article img {
      width: 100%;
      height: auto; }
    .about-jesters article h3 {
      font-size: 100%; }
    .about-jesters article h4 {
      min-height: 2.5em; }
    .about-jesters article h4 + h5 {
      margin-top: -1.25em; }
    .about-jesters article h4, .about-jesters article h5 {
      font-size: 100%;
      text-transform: uppercase;
      opacity: 0.5; }
    @media screen and (min-width: 0) and (max-width: 39.9375em) {
      .about-jesters article {
        float: left;
        display: block;
        margin-right: 2.35765%;
        width: 48.82117%; }
        .about-jesters article:last-child {
          margin-right: 0; }
        .about-jesters article:nth-child(2n) {
          margin-right: 0; }
        .about-jesters article:nth-child(2n+1) {
          clear: left; } }
    @media screen and (min-width: 40em) and (max-width: 53.6875em) {
      .about-jesters article {
        float: left;
        display: block;
        margin-right: 2.35765%;
        width: 31.76157%; }
        .about-jesters article:last-child {
          margin-right: 0; }
        .about-jesters article:nth-child(3n) {
          margin-right: 0; }
        .about-jesters article:nth-child(3n+1) {
          clear: left; } }
    @media screen and (min-width: 53.75em) {
      .about-jesters article {
        float: left;
        display: block;
        margin-right: 2.35765%;
        width: 23.23176%; }
        .about-jesters article:last-child {
          margin-right: 0; }
        .about-jesters article:nth-child(4n) {
          margin-right: 0; }
        .about-jesters article:nth-child(4n+1) {
          clear: left; } }
    .about-jesters article label {
      margin-bottom: 0; }
    .about-jesters article > label {
      display: block;
      margin: -0.809em;
      padding: 0.809em; }
    .about-jesters article input[type="checkbox"] {
      display: none; }
  .about-jesters .modal article {
    width: auto;
    text-align: left;
    padding: 0; }
    @media screen and (min-width: 40em) {
      .about-jesters .modal article {
        float: left;
        display: block;
        margin-right: 2.35765%;
        width: 57.35098%; }
        .about-jesters .modal article:last-child {
          margin-right: 0; } }
  @media screen and (min-width: 40em) {
    .about-jesters .modal figure {
      float: left;
      display: block;
      margin-right: 2.35765%;
      width: 40.29137%; }
      .about-jesters .modal figure:last-child {
        margin-right: 0; } }

.about-casting {
  background: rgba(71, 24, 52, 0.1); }

.modal-background {
  -webkit-transition: opacity 0.25s ease;
  -moz-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  position: fixed;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  margin: 0;
  padding: 0;
  background: rgba(0, 0, 0, 0.85);
  opacity: 0;
  text-align: left;
  visibility: hidden;
  z-index: 99999999999;
  cursor: default; }

.modal {
  -webkit-transition: opacity 0.25s ease;
  -moz-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  border-radius: 0.1875em;
  background: white;
  margin: auto;
  height: 95%;
  position: relative;
  width: 95%;
  padding: 0.5em;
  margin-top: .6em; }
  .modal:after {
    content: "";
    display: table;
    clear: both; }
  .modal h2 {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    border-bottom: 1px solid #dddddd;
    padding: 0.25em 0.5em;
    font-size: 200%;
    line-height: 1em; }
  @media screen and (min-width: 40em) {
    .modal {
      padding: 1em;
      width: 60%;
      height: 60%;
      margin-top: 10em; } }
  @media screen and (min-width: 53.75em) {
    .modal {
      width: 50%;
      margin-top: 10em; } }
  .modal .modal-content {
    position: absolute;
    top: 3em;
    margin-top: 1px;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 1em;
    overflow-y: auto; }
  .modal .modal-close {
    position: absolute;
    top: 0.25em;
    right: 0.25em;
    width: 1em;
    height: 1em;
    font-size: 2em;
    cursor: pointer;
    background: white;
    color: #dddddd;
    z-index: 1; }
    .modal .modal-close i {
      display: block;
      text-align: center; }

.modal-state:checked + .modal-background {
  opacity: 1;
  visibility: visible; }

.modal-state:checked + .modal-background .modal {
  top: 0; }

